# ECSUnitTests

./: CMakeLists.txt  Example.hpp  README.MD
CMakeECS/: CMakeECS.cpp  CMakeECS.h  CMakeLists.txt
ECS/: CMakeLists.txt  ComponentBase.hpp  ComponentData.hpp  ComponentManager.hpp  ECS.hpp  Entity.cpp  Entity.hpp  EntityManager.hpp  EntityMap.hpp  Statics.hpp  World.hpp
test/: CMakeLists.txt  ComponentTests.cpp  EntityManagerTests.cpp  ExampleTests.cpp
